--- a/.github/workflows/publish_accuracy_a1_isomers_sweep.yml
+++ b/.github/workflows/publish_accuracy_a1_isomers_sweep.yml
@@ -128,16 +128,16 @@ jobs:
           lines.append(f"    - potential_scale_gamma: {best_cfg.get('potential_scale_gamma')}")
           lines.append(f"    - beta: {best_cfg.get('beta')}")
           
-          facts_md = \"\\n\".join(lines) + \"\\n\"
-          Path(\"out_accuracy_a1_isomers_sweep/accuracy_a1_isomers_facts.md\").write_text(facts_md, encoding=\"utf-8\")
+          facts_md = "\n".join(lines) + "\n"
+          Path("out_accuracy_a1_isomers_sweep/accuracy_a1_isomers_facts.md").write_text(facts_md, encoding="utf-8")
           print(facts_md)
           
-          gh_out = os.environ.get(\"GITHUB_OUTPUT\")
+          gh_out = os.environ.get("GITHUB_OUTPUT")
           if gh_out:
-              with open(gh_out, \"a\", encoding=\"utf-8\") as f:
-                  f.write(\"facts_md<<EOF\\n\")
+              with open(gh_out, "a", encoding="utf-8") as f:
+                  f.write("facts_md<<EOF\n")
                   f.write(facts_md)
-                  f.write(\"EOF\\n\")
+                  f.write("EOF\n")
           PY
 
       - name: Compute SHA256
