CHORE: ignore tmp directory

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ stress_*.csv
 # ============================================================
 # Local scratch / download dirs (never commit)
 # ============================================================
+/tmp/
 /tmp_*/
 *.zip.sha256
 
