--- a/.github/workflows/compute_accuracy_a1_isomers_a3_4.yml
+++ b/.github/workflows/compute_accuracy_a1_isomers_a3_4.yml
@@ -61,6 +61,75 @@ jobs:
           assert gen_sha == tracked_sha, "canonical truth mismatch: raw -> generated != tracked"
           PY
 
+      - name: Bit-for-bit A2 proof (base vs PR head)
+        if: github.event_name == 'pull_request'
+        env:
+          BASE_SHA: ${{ github.event.pull_request.base.sha }}
+          HEAD_SHA: ${{ github.event.pull_request.head.sha }}
+        run: |
+          set -euo pipefail
+          echo "base_sha=$BASE_SHA"
+          echo "head_sha=$HEAD_SHA"
+
+          run_a2() {
+            local sha=$1
+            local out=$2
+            git checkout --force "$sha"
+            python scripts/accuracy_a1_isomers_a2_self_consistent.py \
+              --a2_variant full_functional_v1_a2_4 \
+              --experiment_id A2_NO_LEAK_PROOF \
+              --input_csv data/accuracy/isomer_truth.v1.csv \
+              --seed 0 \
+              --out_dir "$out"
+          }
+
+          run_a2 "$BASE_SHA" out_a2_pre
+          run_a2 "$HEAD_SHA" out_a2_post
+
+          python - << 'PY'
+          import hashlib
+          import os
+          import sys
+          from pathlib import Path
+
+          pre = Path("out_a2_pre")
+          post = Path("out_a2_post")
+
+          def sha256(path: Path) -> str:
+              return hashlib.sha256(path.read_bytes()).hexdigest()
+
+          metrics_pre = sha256(pre / "metrics.json")
+          metrics_post = sha256(post / "metrics.json")
+          preds_pre = sha256(pre / "predictions.csv")
+          preds_post = sha256(post / "predictions.csv")
+
+          ok = (metrics_pre == metrics_post) and (preds_pre == preds_post)
+
+          proof = Path("a2_bit_for_bit_proof.txt")
+          proof.write_text(
+              "\n".join(
+                  [
+                      f"base_sha={os.environ.get('BASE_SHA')}",
+                      f"head_sha={os.environ.get('HEAD_SHA')}",
+                      f"metrics_sha256_pre={metrics_pre}",
+                      f"metrics_sha256_post={metrics_post}",
+                      f"predictions_sha256_pre={preds_pre}",
+                      f"predictions_sha256_post={preds_post}",
+                      f"match={ok}",
+                      "",
+                  ]
+              ),
+              encoding="utf-8",
+          )
+
+          print(proof.read_text(encoding="utf-8"))
+
+          if not ok:
+              sys.exit("A2 bit-for-bit proof failed")
+          PY
+
+          git checkout --force "$HEAD_SHA"
+
       - name: Run opt-in A3/A3.4 tests (RUN_A3_TESTS=1)
         env:
           RUN_A3_TESTS: "1"
@@ -140,3 +209,4 @@ jobs:
             out_accuracy_a1_isomers_a3_4/checksums.sha256
             out_accuracy_a1_isomers_a3_4/manifest.json
             out_accuracy_a1_isomers_a3_4/provenance.json
+            a2_bit_for_bit_proof.txt
