CI: fetch full history for A2 bit-for-bit in A3.4 compute

--- a/.github/workflows/compute_accuracy_a1_isomers_a3_4.yml
+++ b/.github/workflows/compute_accuracy_a1_isomers_a3_4.yml
@@ -24,11 +24,13 @@ jobs:
         if: github.event_name == 'pull_request'
         with:
           ref: ${{ github.event.pull_request.head.sha }}
+          fetch-depth: 0
 
       - uses: actions/checkout@v4
         if: github.event_name == 'workflow_dispatch'
         with:
           ref: ${{ inputs.ref }}
+          fetch-depth: 0
 
       - uses: actions/setup-python@v5
         with:
